--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [build-system]
-requires = ["setuptools", "setuptools-scm", "wheel"]
+requires = ["setuptools", "setuptools_scm[toml]", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools_scm]
+local_scheme = "node-and-date"
+write_to = "./linear_operator/version.py"
 
 [tool.black]
 line-length = 120
 
 [tool.usort.known]
 first_party = ["linear_operator"]
-
-[tool.setuptools_scm]
-local_scheme = "node-and-date"
-write_to = "./linear_operator/version.py"
